--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,35 +1,50 @@
-<h1>Burgers!</h1>
+<div class="container">
+  <h1  class="title">Burgers!</h1>
 
-<h2>Burgers that are devoured!</h2>
+  <div class="add-new-btn">
+    <h2>Add a new burger</h2>
+    <form id="create-form">
 
-<ul>
-  {{#each burger}}
-    {{#if devoured}}
-      <li>{{burger_name}} {{devoured}}</li>
-    {{/if}}
-  {{/each}}
-</ul>
+      <div class="form-group">
+        <label for="burgerNew">Burger Name:</label>
+        <input type="text" id="burgerNew" name="name">
+      </div>
 
-<h2>Burgers that are not devoured!</h2>
-
-<ul>
-  {{#each burger}}
-    {{#if devoured}}{{else}}
-      <li>{{burger_name}}</li>
-      <button type="submit" id="change-devor" data-id="{{id}}">{{devoured}}</button>
-    {{/if}}
-  {{/each}}
-</ul>
-
-
-
-<h2>Add a new burger</h2>
-<form id="create-form">
-
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
+      <button type="submit" id="addItem">Add Burger</button>
+    </form>
   </div>
 
-  <button type="submit" id="addItem">Add Burger</button>
-</form>
+  <div class="menu">
+    <h2>Burgers that are not devoured!</h2>
+
+    <ul>
+      {{#each burger}}
+        {{#if devoured}}{{else}}
+          <li  class="list-item">{{burger_name}}<button class="shift-btn" type="submit" id="change-devor" data-id="{{id}}">Devoured!</button></li>
+          
+        {{/if}}
+      {{/each}}
+    </ul>
+  </div>
+
+
+
+  <div class="menu">
+    <h2>Burgers that are devoured!</h2>
+
+    <ul>
+      {{#each burger}}
+        {{#if devoured}}
+          <li class="list-item">{{burger_name}} {{devoured}}<button class="delete-btn" type="submit" id="change-devor" data-id="{{id}}">x</button></li>
+          
+        {{/if}}
+      {{/each}}
+    </ul>
+  </div>
+
+
+
+
+
+
+</div>
