setup delete api and delete orm function

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,7 +35,7 @@
     <ul>
       {{#each burger}}
         {{#if devoured}}
-          <li class="list-item">{{burger_name}} {{devoured}}<button class="delete-btn" type="submit" id="change-devor" data-id="{{id}}">x</button></li>
+          <li class="list-item">{{burger_name}} {{devoured}}<button class="delete-btn" type="submit" data-id="{{id}}">x</button></li>
           
         {{/if}}
       {{/each}}
